<resources>
    <string name="app_name">WiFi Seeker</string>
    <string name="ok">OK</string>
    <string name="snapshot_saved">Snapshot was saved</string>
    <string name="no_activity">You have no application able to perform this action</string>
    <string name="cancel">Cancel</string>
    <string name="rename_to">Rename to</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>

    <!-- Fragment titles -->
    <string name="title_snapshots">Snapshots</string>
    <string name="title_preferences">Settings</string>

    <!-- prefs -->
    <string name="settings">Settings</string>
    <string name="default_delay">Default delay</string>
    <string name="show_description">Show pont\'s details</string>
    <string name="show_description_sum">Table above the list</string>
    <string name="work_in_bg">Scan in the background</string>
    <string name="detect_attacks">Attack detection</string>
    <string name="detect_attacks_sum">To warn about the appearance of access points with the same name</string>

    <string name="attack_screen">Configure detecting</string>
    <string name="smart_detection">Smart detection</string>
    <string name="smart_detection_sum">To pass network with a similar MAC addresses</string>
    <string name="extras">Network exceptions (on each line)</string>
    <string name="guarding">Protect connection</string>
    <string name="recom">It is recommended to enable the Scan in the background</string>
    <string name="auto_off_wifi">Auto turning off WiFi</string>
    <string name="auto_off_wifi_sum">When you connect to suspicious networks</string>
    <string name="no_scan_in_bg">Energy saving mode</string>
    <string name="no_scan_in_bg_sum">Do not scan in background</string>
    <string name="other">Other</string>
    <string name="email_dev">Mail to developer</string>
    <string name="oui_source">OUI base source</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="source_code">Source code</string>

    <!-- Description -->
    <string name="essid_format">SSID: %s</string>
    <string name="bssid_format">BSSID: %s</string>
    <string name="capab_format">Capabilities: %s</string>
    <string name="frequ_format">Frequency: %1$d, chanel: %2$d, pwr: %3$d</string>
    <string name="manuf_format">Manufacturer: %s</string>

    <!-- Permissions -->
    <string name="need_location_permission">To function Android 6 and later,\npermission to access the location is required</string>
    <string name="grant">Grant</string>
    <string name="get_perm_by_settings">Allow permission for the location in system settings</string>
    <string name="no_perm">Permission denied</string>

    <!-- Notification -->
    <string name="scanning">Scanning…</string>
    <string name="scanning_battery_save">Lazy scanning…</string>
    <string name="scanning_was_paused">Scanning was paused</string>
    <string name="touch_to_look">Touch to look</string>
    <string name="pause">Pause</string>
    <string name="resume">Continue</string>
    <string name="clone_detected">The clone of your AP was found</string>
    <string name="wifi_was_disabled">WiFi was disabled</string>
    <string name="allow_network">Allow that network</string>
    <string name="turn_wifi_on">Turn WiFi on</string>

    <!-- Other -->
    <string name="send_email">Send an email</string>
    <string name="open_an_url">Open an URL</string>
    <string name="dear_dev">Dear developer, </string>
    <string name="geolocation_need">Starting from Android 5.0 to get a list of WiFi networks you must enable geolocation</string>
    <string name="got_it">Got it</string>
    <string name="error">Error</string>
    <string name="oui_lookup_tool" translatable="false">OUI Lookup Tool</string>
</resources>
