<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings">
    <ListPreference
        android:title="@string/scan_duration"
        android:icon="@drawable/ic_timer_play"
        android:key="scan_duration"
        android:entryValues="@array/duration_arr_val"
        android:entries="@array/duration_arr"
        android:defaultValue="1"
        />
    <ListPreference
        android:title="@string/default_period"
        android:icon="@drawable/ic_timer_pause"
        android:key="default_period"
        android:entryValues="@array/period_arr_val"
        android:entries="@array/period_arr"
        android:defaultValue="1"
        />
    <SwitchPreferenceCompat
        android:title="@string/work_in_bg"
        android:icon="@drawable/ic_radar"
        android:key="work_in_bg"
        android:defaultValue="false"
        app:widgetLayout="@layout/widget_switch"
        />
    <PreferenceCategory
        android:title="@string/other"
        android:key="other"
        >
        <PreferenceScreen
            android:key="source_code"
            android:id="@+id/source_code"
            android:title="@string/source_code"
            android:icon="@drawable/ic_github"
            android:widgetLayout="@layout/widget_outside"
            android:summary="@string/app_version"
            />
        <PreferenceScreen
            android:key="oui_source"
            android:id="@+id/oui_source"
            android:title="@string/oui_source"
            android:summary="@string/oui_lookup_tool"
            android:icon="@drawable/ic_shark"
            android:widgetLayout="@layout/widget_refresh_and_outside"
            />
        <PreferenceScreen
            android:key="privacy_policy"
            android:id="@+id/privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:widgetLayout="@layout/widget_outside"
            />
        <PreferenceScreen
            android:key="mail_to_dev"
            android:id="@+id/mail_to_dev"
            android:title="@string/email_dev"
            android:icon="@drawable/ic_email"
            android:widgetLayout="@layout/widget_outside"
            />
    </PreferenceCategory>
</PreferenceScreen>